# GtkCalc

./: .gitignore  CMakeLists.txt  calculator.c  console_ui.c  main.c  operation.c  ui.c  unit_test.c
include/: calculator.h  console_ui.h  operation.h  ui.h  unit_test.h
